# my-datasette-project

./: .gitignore  README.md  data.db  metadata.yml  pyproject.toml
my_datasette/: load.py
my_datasette/csv_data/: Bicycle_Motor_Vehicle_Accidents.csv  Landmarks_Points_of_Interest.csv  Pedestrian_Motor_Vehicle_Accidents.csv
